--- a/RedditClone/src/App.css
+++ b/RedditClone/src/App.css
@@ -47,3 +47,13 @@ margin:0 60px;
 .sidedrawer-heading {
   padding:16px 24px 8px
 }
+.topic-button {
+  display: flex;
+}
+.sidedrawer-button {
+  padding: 8px 4px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  color: white;
+}
