--- a/RedditClone/src/App.css
+++ b/RedditClone/src/App.css
@@ -4,9 +4,11 @@ body {
 header {
   display:flex;
   flex-direction: row;
-  height: 48px;
+  height: 60px;
   background-color: #1e1e1e;
-  color:white
+  color:white;
+  border-bottom: 2px solid #313131;
+
 }
 .header-container {
   display:flex;
@@ -18,7 +20,6 @@ header {
   flex-grow: 1;
   display: flex;
   width: 100%;
-border-bottom: 2px solid #313131;
 }
 .header-searchbar {
   outline: none;
