--- a/RedditClone/src/App.css
+++ b/RedditClone/src/App.css
@@ -67,3 +67,14 @@ margin:0 60px;
   color: white;
   overflow: hidden;
 }
+.post-header {
+  background-color: rgb(31, 31, 31);
+  color: white;
+  padding: 20px;
+  border-radius: 4px;
+}
+.post-header-category {
+  background-color: #373839;
+  padding: 10px;
+  border-radius: 14px;
+}
