--- a/RedditClone/src/App.css
+++ b/RedditClone/src/App.css
@@ -78,3 +78,8 @@ margin:0 60px;
   padding: 10px;
   border-radius: 14px;
 }
+.post {
+background-color: #1e1e1e;
+margin-top:.7rem;
+color:white;
+}
