--- a/RedditClone/src/App.css
+++ b/RedditClone/src/App.css
@@ -120,3 +120,13 @@ position: relative;
 .main-component-container {
   margin-left:280px ;
 }
+.interaction-button {
+  padding:10px;
+  cursor:pointer;
+
+}
+.interaction-button:hover{
+ background-color:#373839;
+ border-radius: 5px;
+
+}
