--- a/RedditClone/src/App.css
+++ b/RedditClone/src/App.css
@@ -8,6 +8,10 @@ header {
   background-color: #1e1e1e;
   color:white;
   border-bottom: 2px solid #313131;
+  right: 0;
+  left: 0;
+  z-index: 1;
+  position: fixed;
 
 }
 .header-container {
@@ -34,8 +38,9 @@ header {
   flex-direction: column;
   background-color: #1e1e1e;
   color:white;
-  position: absolute;
+  position: fixed;
   left:0;
+  margin-top:3.5rem;
 }
 .input-container {
   flex-grow:1;
@@ -123,7 +128,9 @@ position: relative;
   position: relative;
 }
 .main-component-container {
-  margin-left:280px ;
+  margin-left:280px;
+  position:absolute ;
+  margin-top:5rem;
 }
 .interaction-button {
   padding:10px;
